--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
                 </li>
             </ul>
             <a class="logo">
-                <img class="logo-img" src="images/logo.pdf" alt="">
+                <img class="logo-img" src="images/logo.svg" alt="">
             </a>
             <a class="phone" href="tel:380504565656">+38 050-456-56-56</a>
         </nav>
     </div>
 </header>
-
 <main class="main">
     <section class="headline">
         <div class="container">
@@ -50,7 +49,6 @@
             <a class="headline-btn" href="#">ВЫБРАТЬ</a>
         </div>
     </section>
-
     <section class="new">
         <div class="container">
             <h2 class="new-title">ЧТО НОВОГО</h2>
@@ -80,7 +78,6 @@
             </div>
         </div>
     </section>
-
     <section class="color">
         <div class="container">
             <h2 class="color-title">
@@ -110,7 +107,6 @@
             </ul>
         </div>
     </section>
-
     <section class="contacts">
         <div class="contacts-container">
             <div class="contacts-inner">
@@ -126,19 +122,17 @@
         </div>
     </section>
 </main>
-
 <footer class="footer">
     <div class="container">
         <div class="footer-inner">
             <a class="footer-link" href="#">Политика конфиденциальности</a>
             <a class="logo">
-                <img class="logo-img" src="images/logo.pdf" alt="">
+                <img class="logo-img" src="images/logo.svg" alt="">
             </a>
             <a class="phone" href="tel:380504565656">+38 050-456-56-56</a>
         </div>
     </div>
 </footer>
-
 <script src="js/script.js"></script>
 </body>
 </html>
